# HOUREI-Assist

./: .gitignore  README.md  pyproject.toml
deploy/: env.example  gakukunn-setup.md
deploy/opus-screen-template/: IDENTITY_OPUS_TEMPLATE.md  nightly_restart_addition.sh
deploy/systemd/: hourei-mcp.service
src/hourei_mcp/: __init__.py  cli.py  config.py  models.py  server.py
src/hourei_mcp/egov/: client.py  parser.py
src/hourei_mcp/index/: schema.sql  store.py
src/hourei_mcp/ndl/: client.py
src/hourei_mcp/rules/: provider.py
src/hourei_mcp/tools/: debate.py  law.py  similar.py  usage.py
src/hourei_mcp/vector/: embedder.py  store.py
tests/: test_debate.py  test_fts.py  test_parser.py  test_rules.py
tests/fixtures/: sample_law.xml
